# lameboy

./: .gitignore  CODEOWNERS  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: instruction.rs  main.rs  memory.rs  operations.rs  register.rs  utils.rs
src/cpu/: instruction.rs  memory.rs  mod.rs  operations.rs  register.rs  stack.rs  template.rs
src/cpu/operations/: arithmetic.rs  bits.rs  jumps.rs  load.rs  logical.rs  misc.rs  mod.rs  operations.rs
src/gui/: gui.rs  mod.rs
src/instructions/: instruction.rs  instruction_functions.rs  instruction_set.rs  mod.rs
src/utils/: bits.rs  conversions.rs  log.rs  mod.rs  traits.rs  types.rs
